--- a/localization/package.xml
+++ b/localization/package.xml
@@ -4,10 +4,8 @@
   <name>localization</name>
   <version>0.1.0</version>
   <description>Localization helper nodes</description>
-  <maintainer email="ryanliao@umich.edu">ryanliao</maintainer>
+  <maintainer email="ryanliao@umich.edu">Ryan Liao</maintainer>
   <license>Apache-2.0</license>
-
-  <buildtool_depend>ament_python</buildtool_depend>
 
   <exec_depend>rclpy</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
